testsuite/poke.pkl/integers-diag-1.pk
/* { dg-do compile } */

var i = 0x1_ffff_ffff_ffff_ffff; /* { dg-error "too big" } */
